js/js.translator/testData/incremental/invalidation/fakeOverrideInterfaceFunctionQualifiers/lib1/l1.2.kt
interface Module2Interface {
    public fun testFunction2() = 2
    public fun testFunction22() = 22
}
